# CameraInLCD

./: .gitignore  README.md  error.md  sdkconfig.defaults
main/: CMakeLists.txt  camera_test.c  dvp_isp_dsi_main.c  dvp_lcd_main.c  example_config.h  idf_component.yml  st7735s_official_test.c
